can now read and apply from config file

--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,6 @@
-kick_startup_frames "6"
+punch_startup_frames "4"
+punch_active_frames "2"
+punch_recovery_frames "6"
+kick_startup_frames "8"
 kick_active_frames "4"
 kick_recovery_frames "12"
